--- a/ks/charts/templates/flask.yaml
+++ b/ks/charts/templates/flask.yaml
@@ -9,4 +9,4 @@ spec:
   selector:
     name: {{ .Values.services.flask_app.name }}
   ports:
-    - port: 8000
+    - port: {{ .Values.services.flask_app.service_port}}
