--- a/ks/charts/templates/deployment.yaml
+++ b/ks/charts/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.services.flask_app.name }}
+  namespace: {{ .Values.namespace}}
 spec:
   replicas: 1
   selector:
