--- a/ks/charts/templates/flask.yaml
+++ b/ks/charts/templates/flask.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.services.flask_app.name }}
+  namespace: {{ .Values.namespace}}
   labels:
     name: {{ .Values.services.flask_app.name }}
 spec:
