--- a/ks/charts/templates/flask.yaml
+++ b/ks/charts/templates/flask.yaml
@@ -8,9 +8,10 @@ metadata:
 spec:
   type: NodePort
   selector:
-    name: {{ .Values.services.flask_app.name }}
+    app: {{ .Values.services.flask_app.name }}
   ports:
     - port: 80
       targetPort: {{ .Values.services.flask_app.service_port}}
+      nodePort: 32000
       protocol: TCP
       name: http
